# botnana-apis

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile-xenial  README.md  forth.js  index.js  makefile  package.json  rustfmt.toml
.github/workflows/: main.yml
botnanabcb/: readme.md
botnanabcb/BotnanaLib/: .gitignore  BotnanaLib.cbproj  BotnanaLib.cpp  BotnanaLib.h
botnanabcb/SingleDrive/: SingleDrive.cbproj  SingleDrive.cpp  bcbhmi.cpp  bcbhmi.dfm  bcbhmi.h
botnanac/: Cargo.toml  Makefile  README.md  build.bat  build_vc.bat  makefile  readme.md  rustfmt.toml
botnanac++builder/: readme.md
botnanac++builder/SingleDrive/: .gitignore  SingleDrive.cbproj
botnanac/examples/: GPM.c  axis_setting.c  config_axis.c  config_group.c  config_motion.c  config_slave.c  drive-pp.fs  drive_pp.c  empty.c  group1D.c  group1D2D.c  group1d.c  group1d2d.c  group2D.c  group2d.c  group3D.c  group3d.c  group_setting.c  io.c  motion_setting.c  program.c  program_raw.c  reboot.c  recorder.c  slave_setting.c  target_reached.c  tcp-modbus.c  version.c  version_debug.c  words.c
botnanacs/: readme.md
botnanajs/: README.md  forth.js  index.js  package.json
botnanars/: Cargo.toml  deny.toml  makefile  rustfmt.toml
examples/: abort_program.js  empty.js  get_all.js  mb-tcp-client-using-tokio-modbus-directly.rs  modbus-tcp-client.rs  reset_fault.js  test_slave_api.js  test_version_api.js  words.js  words.rs
libbotnana/: Cargo.toml
rust/: makefile
src/: botnana.rs  data_pool.rs  drive_api.rs  ethercat_api.rs  json_api.rs  lib.rs  modbus.rs  program.rs
test/: test_delta.js
(+267 files in other folders)
