[package]
name = "botnanars"
version = "0.3.10"
authors = ["Mapacode Inc."]
edition = "2018"

[dependencies]
ws = "0.9"
libc = "0.2.41"
url = "2.2.2"
serde_json = "1.0.79"
log = "0.4"
env_logger = "0.9"
modbus = { path = "../../modbus" }
tokio-modbus = "0.5.2"
tokio = "1.17.0"
triple_buffer = "6.0.0"

[dev-dependencies]
serde = "1.0.136"

